--- a/spark_impl/test-Copy1.ipynb
+++ b/spark_impl/test-Copy1.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import findspark\n",
-    "findspark.init('/home/vahid/dev/spark/spark-2.4.4-bin-hadoop2.7/')"
+    "findspark.init()"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,30 +85,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_batches = 64\n",
+    "number_of_batches = 16\n",
     "embed_dim = 128\n",
     "number_of_walks = 10 #10\n",
     "length_of_walks = 80 #80\n",
     "node2vec_p = 0.3\n",
     "node2vec_q = 0.3\n",
-    "input_path = '/home/vahid/workspace/parallel_node_embedding/data/amazon/'\n",
+    "input_path = '/Users/vahid/Desktop/projects/tesstt/myway/data/amazon/'\n",
     "# input_path = '/Users/vahid/Desktop/projects/tesstt/myway/data/arxiv/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99\n"
+      "10\n"
      ]
     }
    ],
@@ -120,8 +120,8 @@
     "    for j in range((i+1), number_of_batches):\n",
     "        combinations.append((i,j))\n",
     "\n",
-    "# combinations = [(0, 1), (1, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 7), (0, 3), (3, 7), (1, 5)]\n",
-    "combinations = [(8,53), (4,34), (7,45), (10,62), (0,2), (1,2), (3,26), (8,50), (9,57), (5,39), (6,40), (7,47), (9,55), (0,13), (2,23), (3,27), (5,35), (9,56), (2,24), (0,8), (1,8), (2,8), (3,8), (4,8), (5,8), (6,8), (7,8), (4,33), (0,10), (8,52), (8,51), (10,61), (0,4), (1,4), (2,4), (3,4), (2,21), (5,37), (6,42), (4,30), (6,41), (6,44), (2,22), (3,28), (3,29), (0,6), (1,6), (2,6), (3,6), (4,6), (5,6), (1,15), (1,18), (2,20), (3,25), (5,38), (7,46), (8,54), (10,60), (0,3), (1,3), (2,3), (0,12), (1,16), (4,32), (4,31), (5,36), (6,43), (7,49), (0,1), (0,7), (1,7), (2,7), (3,7), (4,7), (5,7), (6,7), (0,9), (1,9), (2,9), (3,9), (4,9), (5,9), (6,9), (7,9), (8,9), (0,11), (0,14), (1,19), (7,48), (10,63), (0,5), (1,5), (2,5), (3,5), (4,5), (1,17), (9,58), (9,59)]\n",
+    "combinations = [(0, 1), (1, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 7), (0, 3), (3, 7), (1, 5)]\n",
+    "# combinations = [(8,53), (4,34), (7,45), (10,62), (0,2), (1,2), (3,26), (8,50), (9,57), (5,39), (6,40), (7,47), (9,55), (0,13), (2,23), (3,27), (5,35), (9,56), (2,24), (0,8), (1,8), (2,8), (3,8), (4,8), (5,8), (6,8), (7,8), (4,33), (0,10), (8,52), (8,51), (10,61), (0,4), (1,4), (2,4), (3,4), (2,21), (5,37), (6,42), (4,30), (6,41), (6,44), (2,22), (3,28), (3,29), (0,6), (1,6), (2,6), (3,6), (4,6), (5,6), (1,15), (1,18), (2,20), (3,25), (5,38), (7,46), (8,54), (10,60), (0,3), (1,3), (2,3), (0,12), (1,16), (4,32), (4,31), (5,36), (6,43), (7,49), (0,1), (0,7), (1,7), (2,7), (3,7), (4,7), (5,7), (6,7), (0,9), (1,9), (2,9), (3,9), (4,9), (5,9), (6,9), (7,9), (8,9), (0,11), (0,14), (1,19), (7,48), (10,63), (0,5), (1,5), (2,5), (3,5), (4,5), (1,17), (9,58), (9,59)]\n",
     "combGraph = nx.Graph()\n",
     "for e in combinations:\n",
     "    combGraph.add_edge(e[0],e[1])\n",
@@ -130,20 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=test_myway, master=local[*]) created by __init__ at <ipython-input-9-08cc3ceecc5d>:1 ",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=test_myway, master=local[*]) created by __init__ at <ipython-input-5-08cc3ceecc5d>:1 ",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-08cc3ceecc5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSparkContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mappName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"test_myway\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/dev/spark/spark-2.4.4-bin-hadoop2.7/python/pyspark/context.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[1;32m    131\u001b[0m                     \" note this option will be removed in Spark 3.0\")\n\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 133\u001b[0;31m         \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    134\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
-      "\u001b[0;32m~/dev/spark/spark-2.4.4-bin-hadoop2.7/python/pyspark/context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[1;32m    330\u001b[0m                         \u001b[0;34m\" created by %s at %s:%s \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m                         % (currentAppName, currentMaster,\n\u001b[0;32m--> 332\u001b[0;31m                             callsite.function, callsite.file, callsite.linenum))\n\u001b[0m\u001b[1;32m    333\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    334\u001b[0m                     \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=test_myway, master=local[*]) created by __init__ at <ipython-input-9-08cc3ceecc5d>:1 "
+      "\u001b[0;32m<ipython-input-22-08cc3ceecc5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSparkContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mappName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"test_myway\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/learn/spark/spark-2.3.0-bin-hadoop2.7/python/pyspark/context.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[1;32m    113\u001b[0m         \"\"\"\n\u001b[1;32m    114\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callsite\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfirst_spark_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mCallSite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m         \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
+      "\u001b[0;32m~/Desktop/learn/spark/spark-2.3.0-bin-hadoop2.7/python/pyspark/context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[1;32m    294\u001b[0m                         \u001b[0;34m\" created by %s at %s:%s \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m                         % (currentAppName, currentMaster,\n\u001b[0;32m--> 296\u001b[0;31m                             callsite.function, callsite.file, callsite.linenum))\n\u001b[0m\u001b[1;32m    297\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m                     \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=test_myway, master=local[*]) created by __init__ at <ipython-input-5-08cc3ceecc5d>:1 "
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "334863"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5233"
+       "20929"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,12 +269,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_edges2comb = train_edges.flatMap(find_partitions)\n",
     "train_edges2comb_filtered = train_edges2comb.filter(lambda ee: ee[0] in combinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((2, 4), 9990),\n",
+       " ((4, 10), 10230),\n",
+       " ((2, 12), 10110),\n",
+       " ((6, 12), 10110),\n",
+       " ((10, 12), 10324),\n",
+       " ((9, 13), 10080),\n",
+       " ((0, 14), 10140),\n",
+       " ((3, 15), 10063),\n",
+       " ((5, 9), 10103),\n",
+       " ((3, 7), 30756),\n",
+       " ((4, 6), 10008),\n",
+       " ((12, 14), 10180),\n",
+       " ((7, 11), 10270),\n",
+       " ((1, 13), 10150),\n",
+       " ((4, 14), 10226),\n",
+       " ((8, 14), 10002),\n",
+       " ((6, 8), 10153),\n",
+       " ((1, 5), 30191),\n",
+       " ((1, 9), 10044),\n",
+       " ((5, 13), 10055),\n",
+       " ((0, 2), 9829),\n",
+       " ((0, 6), 9906),\n",
+       " ((3, 11), 10138),\n",
+       " ((11, 15), 10235),\n",
+       " ((8, 10), 9907),\n",
+       " ((2, 8), 10110),\n",
+       " ((0, 10), 10208),\n",
+       " ((7, 15), 10195),\n",
+       " ((1, 6), 10016),\n",
+       " ((6, 7), 30808),\n",
+       " ((10, 15), 10102),\n",
+       " ((0, 1), 30456),\n",
+       " ((8, 13), 10139),\n",
+       " ((4, 13), 10251),\n",
+       " ((3, 12), 10374),\n",
+       " ((7, 12), 10244),\n",
+       " ((11, 12), 10142),\n",
+       " ((9, 14), 10148),\n",
+       " ((2, 3), 30418),\n",
+       " ((13, 14), 10231),\n",
+       " ((2, 15), 10009),\n",
+       " ((2, 7), 9950),\n",
+       " ((5, 6), 30190),\n",
+       " ((3, 8), 10149),\n",
+       " ((10, 11), 10218),\n",
+       " ((3, 4), 30680),\n",
+       " ((4, 5), 30342),\n",
+       " ((12, 13), 10211),\n",
+       " ((0, 13), 10160),\n",
+       " ((1, 2), 30739),\n",
+       " ((7, 8), 10312),\n",
+       " ((8, 9), 9990),\n",
+       " ((4, 9), 10096),\n",
+       " ((5, 14), 10100),\n",
+       " ((1, 14), 10082),\n",
+       " ((1, 10), 10197),\n",
+       " ((9, 10), 10192),\n",
+       " ((0, 9), 10125),\n",
+       " ((6, 15), 10174),\n",
+       " ((14, 15), 10127),\n",
+       " ((0, 5), 9956),\n",
+       " ((6, 11), 10459),\n",
+       " ((2, 11), 10210),\n",
+       " ((5, 10), 10091),\n",
+       " ((5, 7), 10010),\n",
+       " ((3, 5), 9970),\n",
+       " ((1, 7), 10165),\n",
+       " ((0, 4), 10206),\n",
+       " ((2, 10), 9827),\n",
+       " ((1, 15), 10263),\n",
+       " ((8, 12), 10071),\n",
+       " ((0, 12), 10087),\n",
+       " ((7, 9), 10089),\n",
+       " ((4, 12), 9981),\n",
+       " ((2, 14), 10068),\n",
+       " ((9, 15), 10087),\n",
+       " ((13, 15), 10258),\n",
+       " ((2, 6), 10235),\n",
+       " ((11, 13), 10027),\n",
+       " ((7, 13), 10156),\n",
+       " ((6, 14), 10163),\n",
+       " ((5, 11), 10050),\n",
+       " ((1, 11), 10244),\n",
+       " ((3, 13), 10165),\n",
+       " ((1, 3), 10114),\n",
+       " ((5, 15), 10241),\n",
+       " ((4, 8), 10204),\n",
+       " ((3, 9), 9998),\n",
+       " ((10, 14), 10228),\n",
+       " ((9, 11), 10105),\n",
+       " ((0, 8), 9922),\n",
+       " ((6, 10), 10228),\n",
+       " ((3, 6), 10254),\n",
+       " ((2, 5), 10113),\n",
+       " ((0, 7), 10180),\n",
+       " ((8, 11), 9975),\n",
+       " ((4, 11), 10222),\n",
+       " ((4, 7), 10213),\n",
+       " ((5, 12), 10292),\n",
+       " ((9, 12), 10081),\n",
+       " ((10, 13), 10210),\n",
+       " ((8, 15), 10026),\n",
+       " ((1, 8), 9995),\n",
+       " ((5, 8), 10077),\n",
+       " ((3, 14), 9981),\n",
+       " ((2, 9), 10215),\n",
+       " ((1, 4), 10118),\n",
+       " ((0, 11), 10095),\n",
+       " ((6, 9), 10102),\n",
+       " ((0, 3), 30301),\n",
+       " ((4, 15), 9936),\n",
+       " ((11, 14), 10196),\n",
+       " ((1, 12), 9954),\n",
+       " ((0, 15), 10109),\n",
+       " ((12, 15), 9979),\n",
+       " ((7, 10), 10224),\n",
+       " ((2, 13), 10020),\n",
+       " ((7, 14), 10127),\n",
+       " ((6, 13), 10069),\n",
+       " ((3, 10), 10372)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_edges2comb.groupByKey().mapValues(lambda x: len(x)).collect()"
    ]
   },
   {
@@ -784,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
