--- a/notebooks/single_node2vec.ipynb
+++ b/notebooks/single_node2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,43 +15,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/amazon/train_edges_true.txt') as f:\n",
+    "work_dir = '../data/wikipedia_squ/'\n",
+    "embedding_path = '/home/vahid/data/wikipedia_squ_emb_3_3.emb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(work_dir + 'train_edges_true.txt') as f:\n",
     "    train_edges_true = [(line.split(' ')[0], line.split(' ')[1]) for line in f.read().split('\\n')]\n",
     "train_edges_true = [(str(min(int(e[0]),int(e[1]))),str(max(int(e[0]),int(e[1])))) for e in train_edges_true]\n",
     "\n",
-    "with open('../data/amazon/test_edges_true.txt') as f:\n",
+    "with open(work_dir + 'test_edges_true.txt') as f:\n",
     "    test_edges_true = [(line.split(' ')[0], line.split(' ')[1]) for line in f.read().split('\\n')]\n",
     "test_edges_true = [(str(min(int(e[0]),int(e[1]))),str(max(int(e[0]),int(e[1])))) for e in test_edges_true]\n",
     "\n",
-    "with open('../data/amazon/train_edges_false.txt') as f:\n",
+    "with open(work_dir + 'train_edges_false.txt') as f:\n",
     "    train_edges_false = [(line.split(' ')[0], line.split(' ')[1]) for line in f.read().split('\\n')]\n",
     "train_edges_false = [(str(min(int(e[0]),int(e[1]))),str(max(int(e[0]),int(e[1])))) for e in train_edges_false]\n",
     "\n",
-    "with open('../data/amazon/test_edges_false.txt') as f:\n",
+    "with open(work_dir + 'test_edges_false.txt') as f:\n",
     "    test_edges_false = [(line.split(' ')[0], line.split(' ')[1]) for line in f.read().split('\\n')]\n",
     "test_edges_false = [(str(min(int(e[0]),int(e[1]))),str(max(int(e[0]),int(e[1])))) for e in test_edges_false]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "334864\n"
+      "5202\n"
      ]
     }
    ],
    "source": [
     "dic = {}\n",
-    "with open('/Users/vahid/Desktop/amazon_3_3.emb') as f:\n",
+    "with open(embedding_path) as f:\n",
     "    for line in f.read().split('\\n')[1:]:\n",
     "        key = line.split(' ')[0]\n",
     "        value = np.array([float(x) for x in line.split(' ')[1:]])\n",
@@ -61,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1296192, 128), (1296192,), (555552, 128), (555552,))"
+       "((277690, 128), (277690,), (119296, 128), (119296,))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,19 +112,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5min 5s, sys: 6min 32s, total: 11min 37s\n",
+      "Wall time: 47.3 s\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=250, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=0, solver='lbfgs',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=250,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=0, solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 300 ms, sys: 6.71 ms, total: 307 ms\n",
-      "Wall time: 144 ms\n"
+      "CPU times: user 284 ms, sys: 364 ms, total: 648 ms\n",
+      "Wall time: 191 ms\n"
      ]
     }
    ],
@@ -146,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9848635829740021, 0.9892686502332094)"
+       "(0.9374851495997549, 0.9261049803947872)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,13 +184,6 @@
     "test_ap = average_precision_score(test_y, preds)\n",
     "test_roc, test_ap"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
